fix letter spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,7 +10,7 @@ body {
 h2 {
     font-size: 60px;
     font-weight: 400;
-    letter-spacing: 12px;
+    letter-spacing: 8px;
     margin: 0 0 8px;
     text-transform: uppercase;
 }
